--- a/gb/21/8/27/n13190861.md
+++ b/gb/21/8/27/n13190861.md
@@ -1,18 +1,18 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/19920513/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/19920513/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/19920513/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/19920513/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/19920513/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/19920513/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/19920513/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/19920513/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/19920513/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/19920513/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/19920513/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/19920513/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/19920513/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/1992513/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/1992513/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/1992513/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>石铭：四川省当局仍在残酷迫害法轮功学员</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2021/07/id13088998-556ada93ed79d15c3708655bbd1681a6@1200x1200-600x400.jpg" />
 <h6>法轮功学员在华盛顿DC悼念在大陆被迫害致死的法轮功修炼者。（明慧网）
 </h6>
 <hr>
-	<p>【大纪元2021年08月27日讯】据明慧网近日报道，二零二一年上半年<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E5%9B%9B%E5%B7%9D.md#1">四川</a>省钟俊芳、毛坤、彭俊英、廖川江、林守敬等五位法轮功学员被迫害致死或离世，三十四位遭非法判刑，二百零七位被绑架，五百八十一位被骚扰，包括非法抄家、劫持，中共勒索钱财总计约二十三万七千四百三十元。被迫害的法轮功学员中年龄最高的九十三岁。在此仅举部分迫害案例：</p>
+	<p>【大纪元2021年08月27日讯】据明慧网近日报道，二零二一年上半年四川省钟俊芳、毛坤、彭俊英、廖川江、林守敬等五位法轮功学员被迫害致死或离世，三十四位遭非法判刑，二百零七位被绑架，五百八十一位被骚扰，包括非法抄家、劫持，中共勒索钱财总计约二十三万七千四百三十元。被迫害的法轮功学员中年龄最高的九十三岁。在此仅举部分迫害案例：</p>
 <p>一、毛坤，女，五十七岁，家住成都市五里墩81幢4单元3楼，是一名优秀的会计师。因为不放弃信仰真善忍，毛坤屡遭迫害，曾经两次被劳教迫害，被非法判刑五年半。</p>
 <p>二零二零年十二月二十八日上午九点半，成都市金牛区法院对毛坤等四位法轮功学员非法开庭。毛坤在法庭上陈述了自己被绑架的过程：一群警察疯狂的敲门，她还来不及开门，就被警察强行撬门进屋。警察暴力破门闯入后，她被茶店子派出所警察一拳打在眼睛上，当场她就被打翻在地，警察把她按在地上双手反铐，使劲的拧她的胳膊，导致她的手臂当场骨折。</p>
 <p>律师问毛坤：你还记得打你的人的模样吗？毛坤回答：记得。公诉人打断毛坤的陈述，并且否认警察暴力执法，说是门倒下把她砸伤的。</p>
 <p>在大量的事实面前，律师做了有理有据的辩护，法官和公诉人罔顾事实，仍然冤判毛坤十一年半，勒索罚款两万元，毛坤提起上诉。</p>
 <p>上诉期间，毛坤被非法关押于成都市看守所，二零二一年四月初，毛坤身体出现异常，被成都市看守所送到成都市第三人民医院抢救，并通知家属紧急办理保外就医的手续；二零二一年四月十一日晚，毛坤在成都市第三人民医院离世。</p>
-<p>二、<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E5%9B%9B%E5%B7%9D.md#1">四川</a>乐山市钟俊芳，六十八岁。曾被非法劳教两年，三次被非法判刑，刑期总共长达十七年半。冤狱中，钟俊芳遭受惨无人道的各种各样的折磨，迫害中昏迷十多次。</p>
+<p>二、四川乐山市钟俊芳，六十八岁。曾被非法劳教两年，三次被非法判刑，刑期总共长达十七年半。冤狱中，钟俊芳遭受惨无人道的各种各样的折磨，迫害中昏迷十多次。</p>
 <p>二零一二年四月二十二日，钟俊芳被非法判刑八年半，被劫持到成都女子监狱继续关押迫害。因钟俊芳拒绝“转化”，经常遭到打手闵含梅、陈蓉、祝倩、徐桦等犯人的殴打，有时被打得住院。</p>
 <p>二零一七年十二月的一天，监狱主动打电话给钟俊芳家人，让家人去监狱探视她。哥哥、弟弟急匆匆去龙泉监狱。只见钟俊芳由两人架着扶出来，以往体重一百二十多斤白白胖胖的钟俊芳，被迫害的严重变形，骨瘦如柴，白发苍苍，体重最多62斤。家人要求释放回家就医，监狱答复：“人现在还有气在，不能放人。”</p>
 <p>在这残酷的继续迫害下，钟俊芳身心受到巨大的伤害，于二零二一年四月十三日含冤离世。</p>
@@ -23,54 +23,45 @@
 <p>五、成都刘伟、艾朝玉夫妇，被绑架、非法关押构陷近两年，二零二一年四月二十七日下午被成都市成华区法院非法开庭，夫妻俩均被非法判刑八年。夫妻俩与家人坚决不服判决，马上要求上诉，并请律师继续代理二审。</p>
 <p>六、二零二一年五月十二日，成都杨华明被武侯区法院非法判刑四年，罚款一万元。<br />
 杨华明，男，五十三岁，在四川省妇幼保健院工作。二零一九年十月一日，成都市武侯区公安分局晋阳派出所警察和遂宁市射洪县青岗镇派出所警察在杨华明老家绑架了他。</p>
-<p>二零二一年四月二十一日，成都市武侯区法院对杨华明进行了第一次非法庭审，法庭上杨华明郑重声明修炼法轮功没有罪，自己只是在按真善忍做一个好人，并一直坚持要求审判长解释：而审判长的解释是，他们只能听610的（江泽民一伙为<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E8%BF%AB%E5%AE%B3%E6%B3%95%E8%BD%AE%E5%8A%9F.md#1">迫害法轮功</a>而专门成立的非法组织）。</p>
+<p>二零二一年四月二十一日，成都市武侯区法院对杨华明进行了第一次非法庭审，法庭上杨华明郑重声明修炼法轮功没有罪，自己只是在按真善忍做一个好人，并一直坚持要求审判长解释：而审判长的解释是，他们只能听610的（江泽民一伙为迫害法轮功而专门成立的非法组织）。</p>
 <p>残酷的迫害也使迫害者们纷纷遭到了恶报，近期明慧网在《2021年上半年四川法轮功学员遭迫害综述》一文中列了：成都前“610”办公室主任余辉，二零二一年五月十二日被美国国务院宣布制裁；成都市原610主任廖维忠二零二一年三月遭恶报落马；原绵阳市中级法院院长莫亚林，遭报被查。有二十多人遭恶报的名单，列证了做恶必报的天理。</p>
-<p>目前，参与<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E8%BF%AB%E5%AE%B3%E6%B3%95%E8%BD%AE%E5%8A%9F.md#1">迫害法轮功</a>的周永康、薄熙来、李东生、周本顺、张越、孙力军等迫害法轮功的凶手们已被绳之以法，逾万参与迫害的恶人们已遭到各种报应，彻底清算中共罪恶的日子已经到来。</p>
-<p>最近海外法轮功学员向三十七个国家政府，包括五眼联盟的美国、加拿大、英国、澳大利亚及新西兰和欧盟的二十三个国家等递交了又一批<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E8%BF%AB%E5%AE%B3%E8%80%85%E5%90%8D%E5%8D%95.md#1">迫害者名单</a>，要求依法对这些恶人及其家属禁止入境、冻结资产，中共的许多官员都被列入名单之中。</p>
+<p>目前，参与迫害法轮功的周永康、薄熙来、李东生、周本顺、张越、孙力军等迫害法轮功的凶手们已被绳之以法，逾万参与迫害的恶人们已遭到各种报应，彻底清算中共罪恶的日子已经到来。</p>
+<p>最近海外法轮功学员向三十七个国家政府，包括五眼联盟的美国、加拿大、英国、澳大利亚及新西兰和欧盟的二十三个国家等递交了又一批迫害者名单，要求依法对这些恶人及其家属禁止入境、冻结资产，中共的许多官员都被列入名单之中。</p>
 <p>二零二一年三月三十日，美国国务院公布《2020年人权国别报告》。报告关注法轮功在中国受到的迫害，并多次提到中共对法轮功学员及人权律师的迫害。</p>
 <p>二零二一年四月二十一日，美国国际宗教自由委员会（USCIRF）公布二零二零年年度报告。报告说，二零二零年，中国的宗教信仰自由状况继续恶化。中共仍在迫害法轮功，并很可能在继续活摘法轮功学员器官。</p>
 <p>奉劝四川省（包括中国大陆所有省市）那些继续追随中共江泽民集团迫害法轮功的中共各级党政官员、政法委、610、公检法司人员，赶快清醒，悬崖勒马，抛弃中共，悔过自新，为自己选择一条后路。切莫再执迷不悟，继续做恶，毁了自己的前程和生命的永远！</p>
 <p>责任编辑：萧明</p>
 	
-<hr>
-
-
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/21/4/18/n12887453.md#1">四川法轮功学员毛坤被成都看守所迫害致死</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/21/7/14/n13088746.md#1">四川攀枝花64名法轮功学员被迫害身亡</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/21/7/20/n13102367.md#1">中共迫害者新名单递交37国 恶人面临制裁</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/21/8/2/n13133093.md#1">发生在遂宁看守所的虐杀 受害人疑遭活摘器官</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/21/4/18/n12887453.md#1">四川法轮功学员毛坤被成都看守所迫害致死</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/21/7/14/n13088746.md#1">四川攀枝花64名法轮功学员被迫害身亡</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/21/7/20/n13102367.md#1">中共迫害者新名单递交37国 恶人面临制裁</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/21/8/2/n13133093.md#1">发生在遂宁看守所的虐杀 受害人疑遭活摘器官</a></li>
 <hr>
-
-
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/19920513/ntdtv/blob/master/gb/2020/07/20/a102898210.md#1" target="_blank">美国务卿：中共迫害法轮功21年 必须停止</a> </li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/1/25/n10088158.md#1" target="_blank">林辉：民国长春市长厚颜事共 文革差点被打死</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/13/11/6/n4003814.md#1" target="_blank">信师信法　一路前行（下）</a></li>
-<hr>
-
+<li><a href="https://github.com/1992513/djy/blob/master/gb/21/1/23/n12706455.md#1" target="_blank">“天安门自焚”伪案八大悬疑人物</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/1/22/n10994378.md#1" target="_blank">陆文：迫害佛法最终害了自己</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/14/10/23/n4278972.md#1" target="_blank">阚神州：中共行株连之罪恶 肇残民之祸</a></li>
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/11/n13927607.md#1">天的谴告 人的机会</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/22/8/9/n13798623.md#1">时空可压缩？奇异的梦中之梦</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/3/n13921611.md#1">红楼欲坠话红楼：曹雪芹与法国现代作家普鲁斯特 思想意识“惊人相似”</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/15/n13930206.md#1">来自《唐阵》的感动</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/22/n13935048.md#1">【未解之谜】来自星星的孩子（3）</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/25/n13938231.md#1">【财商天下】全球制造业大转移 墨西哥成中企跳板</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/25/n13938124.md#1">【拍案惊奇】盘点“白纸”年轻被捕者详情</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/25/n13938245.md#1">【舞蹈三剑客】有史以来第一次！神韵首次抵达多明尼加演出</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/24/n13937294.md#1">“一孩难求” 中国迎来首轮幼儿园关停潮</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/23/n13936809.md#1">北京批准中企援俄？布林肯：几乎确定</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/24/n13937215.md#1">爆发聚集性疫情 中国多地学校停课</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/25/n13937673.md#1">香港名媛蔡天凤遭杀害分尸 3名涉案嫌犯被捕</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/23/n13936794.md#1">歌手李玟透露“一辈子最大恐惧” 自曝身体缺陷</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/23/n13936731.md#1">杜琪峯因电影言论遭封杀 黄明志为前辈抱不平</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/24/n13937630.md#1">打破香港影史纪录 《毒舌大状》本土票房破亿</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/24/n13937577.md#1">柏林影展走红毯 范冰冰：5年没拍戏挺残酷</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/15/n13930478.md#1">吃马铃薯会得糖尿病？研究这样说</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/3/n13921769.md#1">霹雳果的7大健康益处</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/23/n13936555.md#1">晚上睡不着怎么办？心理师推荐改善方法</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/16/n13930856.md#1">血液循环好 子宫也会很健康 改善血瘀这样吃</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/25/n13937718.md#1">【未解之谜】植物口香糖？恶魔之果？槟榔的秘密</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/2/n14303783.md#1">【未解之谜】美国日全食开启灾难之门 比格斯预言盘点</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/4/n14304300.md#1">历史上那些“退”的智慧</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/29/n14300489.md#1">“别人”做的饭菜</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/4/n14304683.md#1">【未解之谜】灵异阿拉斯加 黑暗金字塔的秘密</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/1/n14302520.md#1">【古道人生】康熙年间关帝显灵 大败贼寇的真实记载</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/8/n14307461.md#1">【时事金扫描】伊朗下战书 以色列却甩出一张图</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/7/n14306767.md#1">【晚间新闻】大陆网民热议孟加拉政变 中共忙封号</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/8/n14306935.md#1">【新闻欣视角】新冠病毒警报再响 两变异株来势汹</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/6/n14306092.md#1">华人餐桌的美味 蓝蟹为何令意大利政府头疼</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/6/n14305720.md#1">【更新】2024年巴黎奥运奖牌榜 8月6日</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/6/n14306005.md#1">奥运挺美惹祸 国家体育总局官员袁昊然遭调查</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/7/n14306143.md#1">《死侍与金钢狼》票房惊人 席琳·狄翁逗趣恭喜</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/7/n14306851.md#1">周星驰拍片曾资金不足 富豪出手只为演个角色</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/5/n14305321.md#1">陈思诚新片《解密》票房遇冷 估计至少亏3亿</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/7/n14306732.md#1">章子怡带儿女出游 炎炎夏日陪玩全身包裹严实</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/6/n14306062.md#1">徐峥新片《逆行人生》遭一影院抵制 引热议</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/6/n14305693.md#1">飞机快起飞了还在排安检怎么办？旅游达人提2方法</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/7/n14306209.md#1">营养师推荐一传统小吃 钙含量高豆浆25倍</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/6/n14305481.md#1">补充水分小心喝下细菌毒素 这4种水不要喝</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/1/n14302749.md#1">肾功能不及格的10大征兆 多注意可预防洗肾</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/29/n14300518.md#1">超级保健卫士：黑蒜? 壮体 抗癌</a></li>
 <hr>
-
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/21/8/27/n13190861.htm">石铭：四川省当局仍在残酷迫害法轮功学员</a></p><hr>
-
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/19920513/djy/blob/master/gb/21/8/27/n13190861.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/19920513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/19920513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/19920513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/21/8/27/n13190861.htm">石铭：四川省当局仍在残酷迫害法轮功学员</a></p><hr>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://quickchart.io/qr?size=256&text=https://github.com/1992513/djy/blob/master/gb/21/8/27/n13190861.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
